--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -21,21 +21,21 @@ jobs:
     strategy:
       matrix:
         include:
-          # -------- Linux --------
+          # ---------- Linux ----------
           - os: ubuntu-latest
             arch: amd64
             label: linux-amd64
-            static: false          # ⬅ Linux 无需 --static，避免 .a 不全
+            static: false
           - os: ubuntu-latest
             arch: arm64
             label: linux-arm64
             static: false
-          # -------- Windows ------
+          # ---------- Windows ----------
           - os: windows-latest
             arch: amd64
             label: windows-amd64
-            static: false
-          # -------- macOS --------
+            static: true
+          # ---------- macOS ----------
           - os: macos-latest
             arch: amd64
             label: macos-amd64
@@ -47,9 +47,10 @@ jobs:
 
     steps:
     # 1️⃣  Checkout -----------------------------------------------------------
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-    # 2️⃣  ⬅ **仅 Linux**：图形栈依赖 -----------------------------------------
+    # 2️⃣  Linux：安装 JavaFX 图形依赖 ----------------------------------------
     - name: Install Linux desktop libraries
       if: matrix.os == 'ubuntu-latest'
       run: |
@@ -62,53 +63,62 @@ jobs:
           libpango1.0-dev libharfbuzz-dev libatk1.0-dev \
           libgl1-mesa-dev freeglut3-dev
 
-
-    # 3️⃣  Liberica NIK + FX ---------------------------------------------------
-    - name: Setup Liberica NIK (with JavaFX)
+    # 3️⃣  macOS & Linux & Windows：设置 BellSoft NIK -------------------------
+    - name: Setup Liberica NIK (macOS / Linux)
+      if: matrix.os != 'windows-latest'
       uses: graalvm/setup-graalvm@v1
       with:
-        distribution: 'liberica'
-        java-package: 'jdk+fx'      # 带 JavaFX
-        java-version: '21'
+        distribution: liberica                   # NIK 支持 setup-graalvm :contentReference[oaicite:3]{index=3}
+        java-package: jdk+fx                     # 自带 JavaFX 模块
+        java-version: 21
         architecture: ${{ matrix.arch }}
-        components: 'native-image'
-        native-image-job-reports: 'true'
+        components: native-image
+        native-image-job-reports: true
         github-token: ${{ secrets.GITHUB_TOKEN }}
 
-    # 4️⃣  Maven build ---------------------------------------------------------
+    # 3️⃣-Win ⼿动下载 Liberica NIK ZIP ----------------------------------------
+    - name: Download Liberica NIK (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: pwsh
+      run: |
+        $url  = 'https://download.bell-sw.com/vm/23.1.7/' +
+                'bellsoft-liberica-vm-full-openjdk21.0.7+9-23.1.7+1-windows-amd64.zip'
+        $zip  = "$env:RUNNER_TEMP\nik.zip"
+        Invoke-WebRequest $url -OutFile $zip   # 官方下载页 :contentReference[oaicite:4]{index=4}
+        Expand-Archive $zip -DestinationPath $env:RUNNER_TEMP
+        $nik  = "$env:RUNNER_TEMP\bellsoft-liberica-vm-full-openjdk21-23.1.7"
+        echo "GRAALVM_HOME=$nik" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
+        echo "$nik\bin"           | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+
+    # 4️⃣  Maven 构建 ---------------------------------------------------------
     - name: Build with Maven
       run: mvn -B clean package
 
-    # 5️⃣  Copy fat-jar --------------------------------------------------------
-    - name: Prepare Native Build Dir
+    # 5️⃣  准备 fat-jar → app.jar --------------------------------------------
+    - name: Prepare Native Build Directory
       shell: bash
       run: |
         set -e
         mkdir -p target/native-image
         FAT=$(find target -maxdepth 1 -type f -name "*.jar" ! -name "original-*.jar" | head -n1)
         cp "$FAT" target/native-image/app.jar
-        echo "Using fat-jar $FAT"
+        echo "fat-jar = $FAT"
 
-    # 6️⃣  native-image（Windows / Linux / macOS）------------------------------
-    # -- Windows
+    # 6️⃣  Windows native-image ----------------------------------------------
     - name: Build Native Image (Windows)
       if: matrix.os == 'windows-latest'
       shell: pwsh
       run: |
         Copy-Item -Path config -Destination target/native-image -Recurse -Force
         Push-Location target/native-image
-        native-image.cmd `
-          --initialize-at-run-time `
-          -H:+UnlockExperimentalVMOptions -H:-CheckToolchain `
-          --no-fallback --enable-https --enable-http `
-          -H:+JNI -H:ConfigurationFileDirectories=./config `
-          -H:+AddAllCharsets -H:+IncludeAllLocales `
-          -jar app.jar `
-          -H:Name=biliTickerBuy-${{ matrix.label }} `
-          ${{ matrix.static && '--static' || '' }}
+        $vc = "${env:ProgramFiles(x86)}\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        if (-not (Test-Path $vc)) {
+          $vc = "${env:ProgramFiles(x86)}\Microsoft Visual Studio\2022\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
+        }
+        cmd /c "`"$vc`" && native-image.cmd --static --enable-https --enable-http --no-fallback -H:ConfigurationFileDirectories=./config -jar app.jar -H:Name=biliTickerBuy-${{ matrix.label }}"
         Pop-Location
 
-    # -- Linux
+    # 7️⃣  Linux native-image --------------------------------------------------
     - name: Build Native Image (Linux)
       if: matrix.os == 'ubuntu-latest'
       shell: bash
@@ -116,15 +126,16 @@ jobs:
         cp -r config target/native-image/
         pushd target/native-image
         native-image \
-          --initialize-at-run-time \
-          -H:+UnlockExperimentalVMOptions -H:-CheckToolchain \
-          --no-fallback --enable-https --enable-http \
+          --enable-https --enable-http \
+          --no-fallback \
           -H:+JNI -H:ConfigurationFileDirectories=./config \
+          --initialize-at-run-time \
+          --gc=G1 \
           -jar app.jar \
           -H:Name=biliTickerBuy-${{ matrix.label }}
         popd
 
-    # -- macOS
+    # 8️⃣  macOS native-image --------------------------------------------------
     - name: Build Native Image (macOS)
       if: matrix.os == 'macos-latest'
       shell: bash
@@ -132,25 +143,24 @@ jobs:
         cp -r config target/native-image/
         pushd target/native-image
         native-image \
-          --initialize-at-run-time \
-          -H:+UnlockExperimentalVMOptions -H:-CheckToolchain \
-          --no-fallback --enable-https --enable-http \
+          --enable-https --enable-http \
+          --no-fallback \
           -H:+JNI -H:ConfigurationFileDirectories=./config \
+          --initialize-at-run-time \
           -jar app.jar \
           -H:Name=biliTickerBuy-${{ matrix.label }}
         popd
 
-    # 8️⃣  打包可执行文件 + 动态库 -------------------------------------------
+    # 9️⃣  打包可执行文件 + 动态库 -------------------------------------------
     - name: Stage Native Package
       shell: bash
       run: |
-        set -e
         OUT=dist/${{ matrix.label }}
         mkdir -p "$OUT"
         cp -r target/native-image/* "$OUT"/
         ls -R "$OUT"
 
-    # 9️⃣  上传平台产物 -------------------------------------------------------
+    # 🔟  上传平台产物 --------------------------------------------------------
     - name: Upload Native Artifacts
       uses: actions/upload-artifact@v4
       with:
@@ -158,7 +168,7 @@ jobs:
         path: dist/${{ matrix.label }}
         retention-days: 5
 
-    # 🔟  仅 linux-amd64 上传 fat-jar ----------------------------------------
+    # 1️⃣1️⃣  仅 linux-amd64 上传 fat-jar -------------------------------------
     - name: Upload JAR Artifacts
       if: matrix.os == 'ubuntu-latest' && matrix.arch == 'amd64'
       uses: actions/upload-artifact@v4
@@ -169,17 +179,17 @@ jobs:
           !target/original-*.jar
         retention-days: 5
 
-# ───────────────────────── 发布阶段 ──────────────────────────────
+# ------------------------------ Release --------------------------------------
   release:
     needs: java-build
     runs-on: ubuntu-latest
     steps:
-      - name: Download Artifacts
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
 
-      - name: Zip Each Artifact Directory
+      - name: Zip each artifact directory
         shell: bash
         run: |
           cd artifacts
@@ -187,7 +197,7 @@ jobs:
             zip -r "../${dir%/}.zip" "$dir"
           done
 
-      - name: Set Up Date
+      - name: Set up date
         run: echo "DATE=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
 
       - name: Create GitHub Release
